# Deep-Skill-Graph-Based-Humanoid-Navigation-DSG-HN

./: .gitignore  README.md
DSG_HN/deploy/dsg/: CMakeLists.txt  build_dsg.cpp  build_dsg.h  collect_transitions.cpp  example.cpp  robot_bridge.cpp  robot_bridge.h
DSG_HN/deploy/dsg/include/: robot_bridge.h
DSG_HN/deploy/include/FSM/: FSMState.h
DSG_HN/deploy/include/dds/: reset_publisher.cpp  reset_subscriber.cpp  reset_subscriber.h  state_subscriber.cpp  state_subscriber.h  vel_publisher.cpp  vel_publisher.h  vel_subscriber.cpp  vel_subscriber.h
DSG_HN/deploy/robots/g1_29dof/: CMakeLists.txt  main.cpp
DSG_HN/deploy/robots/g1_29dof/config/: config.yaml
DSG_HN/deploy/robots/g1_29dof/config/policy/velocity/v0/params/: deploy.yaml
DSG_HN/deploy/robots/g1_29dof/src/: State_RLBase.cpp
DSG_HN/deploy/src/: CMakeLists.txt  example.cpp
DSG_HN/robot_bridge/: robot_bridge.cpp  robot_bridge_dds.cpp  robot_bridge_train.cpp
DSG_HN/robot_bridge/dds/: reset_publisher.cpp  reset_subscriber.cpp  state_subscriber.cpp  vel_publisher.cpp  vel_subscriber.cpp
DSG_HN/robot_bridge/include/: robot_bridge.h  robot_bridge_dds.h  robot_bridge_train.h
DSG_HN/robot_bridge/include/dds/: reset_publisher.h  state_subscriber.h  vel_subscriber.h
DSG_HN/robot_bridge/include/mujoco_utils/: mujoco_articulation.h  mujoco_engine.h
DSG_HN/robot_bridge/mujoco_utils/: mujoco_articulation.h  mujoco_engine.cpp
DSG_HN/train/: .gitignore  CMakeLists.txt  agent.cpp  example.cpp  main.cpp  test.cpp  train.cpp
DSG_HN/train/include/: agent.h  environment.h  model.hpp
DSG_HN/train/utils/: mujoco_engine.h
unitree_mujoco/simulate/: config.yaml
unitree_mujoco/simulate/src/: main.cc
unitree_mujoco/simulate/src/joystick/: jstest.cc
unitree_mujoco/terrain_tool/: terrain_generator.py
unitree_mujoco/unitree_robots/g1/: ai_maker_space_scene.xml
